<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.alexeyrevinski.myapplication.MonitorActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:visibility="visible"
        android:background="@color/colorTitleBar">
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/title_string"
            android:textColor="@color/colorTitleText"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/abilityLab"
            android:contentDescription="@string/icon_ablab"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="7dp"
            app:srcCompat="@drawable/ability_lab"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        android:layout_below="@id/titleBar"
        android:orientation="horizontal"
        android:visibility="visible"
        android:background="@color/colorPrimaryDark">
        <RelativeLayout
            android:id="@+id/statusBarIconSpace"
            android:layout_width="@dimen/status_bar_height"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/icon_prog"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/icon_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="false"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/icon_alert"
                android:cropToPadding="false"
                android:visibility="invisible"
                app:srcCompat="?android:attr/alertDialogIcon" />

            <ImageView
                android:id="@+id/icon_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="false"
                android:contentDescription="@string/icon_good"
                android:cropToPadding="false"
                android:visibility="visible"
                app:srcCompat="?android:attr/textCheckMark"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/statusBarIconSpace"
            android:layout_centerVertical="true"
            android:textColor="@color/colorText"
            android:text="@string/displaying_data"/>

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:text="@string/time_default"/>

        <TextView
            android:id="@+id/timeText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:textColor="@color/colorText"
            android:text="@string/time_default"/>

        <TextView
            android:id="@+id/timeText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorText"
            android:text="@string/time_default"/>

        <TextView
            android:id="@+id/timeText1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="110dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:text="@string/res"/>

        <TextView
            android:id="@+id/timeText2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="110dp"
            android:layout_centerVertical="true"
            android:textColor="@color/colorText"
            android:text="@string/dis"/>

        <TextView
            android:id="@+id/timeText3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="110dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorText"
            android:text="@string/not"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/dataText_GX_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusBar"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/gx"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_GY_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_GX_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/gy"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_GZ_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_GY_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/gz"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_AX_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_GZ_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/ax"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_AY_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_AX_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/ay"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_AZ_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_AY_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/az"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_EM_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_AZ_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/em"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_EJ_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_EM_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/ej"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_CU_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_EJ_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/cu"
        android:textSize="@dimen/text_size"/>


    <TextView
        android:id="@+id/dataText_GX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusBar"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_GY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_GX_text"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_GZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_GY_text"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_AX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_GZ_text"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_AY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_AX_text"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_AZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_AY_text"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_EM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_AZ_text"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_EJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_EM_text"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:id="@+id/dataText_CU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataText_EJ_text"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size"/>




    <ToggleButton
        android:id="@+id/directButton"
        android:layout_width="@dimen/two_buttons_inline_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textOff="@string/CW"
        android:textOn="@string/CCW"
        android:visibility="visible" />

    <ToggleButton
        android:id="@+id/motorButton"
        android:layout_width="@dimen/two_buttons_inline_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textOff="@string/start_motor"
        android:textOn="@string/stop_motor"
        android:visibility="visible" />


</RelativeLayout>
